k8s/pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: thibaut # Nom à attribuer au pod
  namespace: thibaut-allart
  labels:
    app: motd
    app.kubernetes.io/name: motd
spec:
  containers:
  - name: motd
    image: faige/flask:1.0.0  # Image Docker (doit être accessible par un 'docker pull')
    ports:
      - containerPort: 80
        name: flask-port
