k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: motd-service
spec:
  selector:
    app.kubernetes.io/name: motd
  ports:
  - name: motd-port
    protocol: TCP
    port: 80
    targetPort: flask-port
  # type: ClusterIP
  type: LoadBalancer
